[package]
name = "mercurius"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
futures-util = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["rc"] }
serde_json = "1.0.114"
serde_json_matcher = "0.1.5"
tokio = { version = "1.36.0", features = ["macros"] }
